[package]
authors = ["Sebastian Messmer <mail@smessmer.de>"]
name = "leptos_twelements"
description = "The binary-layout library allows type-safe, inplace, zero-copy access to structured binary data. You define a custom data layout and give it a slice of binary data, and it will allow you to read and write the fields defined in the layout from the binary data without having to copy any of the data. It's similar to transmuting to/from a `#[repr(packed)]` struct, but much safer."
documentation = "https://docs.rs/leptos_twelements"
rust-version = "1.72"
edition = "2021"
homepage = "https://github.com/smessmer/leptos_twelements"
# TODO keywords
# TODO categories
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smessmer/leptos_twelements"
version = "0.0.1"


[dependencies]
axum = { version = "0.6.4", optional = true }
leptos = { version = "0.4", features = ["nightly"] }
serde = "^1.0.188"
leptos_meta = { version = "0.4", features = ["nightly"] }

[features]
default = []
ssr = ["axum"]
axum = ["dep:axum"]
