[package]
authors = ["Sebastian Messmer <mail@smessmer.de>"]
name = "leptos_twelements"
description = "A UI component library for the Leptos Web Framework, based on Tailwind Elements."
documentation = "https://docs.rs/leptos_twelements"
rust-version = "1.72"
edition = "2021"
homepage = "https://github.com/smessmer/leptos_twelements"
# TODO keywords
# TODO categories
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smessmer/leptos_twelements"
version = "0.0.5"


[dependencies]
axum = { version = "0.6.4", optional = true }
leptos = { version = "0.4", features = ["nightly"] }
serde = "^1.0.188"
leptos_meta = { version = "0.4", features = ["nightly"] }

[features]
default = []
ssr = ["axum"]
axum = ["dep:axum"]
